# gitstuff

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  update_deps.sh
.github/workflows/: release.yml
audit/: BUILD.bazel  audit.go
cmd/: BUILD.bazel  back.go  checkout.go  commit.go  fetch.go  forward.go  init.go  open.go  pull.go  push.go  root.go  submit.go
config/: BUILD.bazel  config.go
git/: BUILD.bazel  git.go  git_test.go
scripts/: release.sh
shell/: BUILD.bazel  prompt.go  shell.go
stack/: BUILD.bazel  stack.go  stack_test.go
