bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_charmbracelet_bubbletea",
    "com_github_erikgeiser_promptkit",
    "com_github_google_go_github_v50",
    "com_github_pterm_pterm",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "org_golang_x_oauth2"
)
