load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "back.go",
        "checkout.go",
        "commit.go",
        "forward.go",
        "init.go",
        "open.go",
        "pull.go",
        "push.go",
        "root.go",
        "submit.go",
    ],
    importpath = "github.com/de1ux/gitstuff/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//git",
        "//shell",
        "//stack",
        "@com_github_google_go_github_v50//github:go_default_library",
        "@com_github_pterm_pterm//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
