load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "back.go",
        "checkout.go",
        "commit.go",
        "forward.go",
        "init.go",
        "open.go",
        "pull.go",
        "push.go",
        "root.go",
        "submit.go",
    ],
    importpath = "github.com/de1ux/gitstuff/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//audit",
        "//git",
        "//shell",
        "//stack",
        "@com_github_pterm_pterm//:pterm",
        "@com_github_spf13_cobra//:cobra",
    ],
)
