load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stack",
    srcs = ["stack.go"],
    importpath = "github.com/de1ux/gitstuff/stack",
    visibility = ["//visibility:public"],
)

go_test(
    name = "stack_test",
    srcs = ["stack_test.go"],
    embed = [":stack"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
